--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
         <div class="hero-wrapper">
             <!-- Ảnh Cover -->
             <div class="hero-cover">
-                <img src="Cover.jpg" alt="Ảnh bìa Huy Hoàng & Phương Thảo">
+                <img src="Cover.JPG" alt="Ảnh bìa Huy Hoàng & Phương Thảo">
             </div>
 
             <!-- Thông tin cưới -->
