--- a/index.html
+++ b/index.html
@@ -669,11 +669,11 @@
             <h3>Chương Trình Tiệc</h3>
             <div class="timeline-item">
                 <span class="time">11:00</span>
-                <span class="event">Đón khách & Chụp hình lưu niệm</span>
+                <span class="event">Đón khách</span>
             </div>
             <div class="timeline-item">
                 <span class="time">12:00</span>
-                <span class="event">Khai mạc Nghi lễ thành hôn</span>
+                <span class="event">Nghi lễ thành hôn</span>
             </div>
             <div class="timeline-item">
                 <span class="time">12:30</span>
